<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.marcelshimooka.example.nicetoast.DemoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/activity_demo_btn_simple_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simple_message" />

        <Button
            android:id="@+id/activity_demo_btn_success_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/success_message" />

        <Button
            android:id="@+id/activity_demo_btn_warning_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warning_message" />

        <Button
            android:id="@+id/activity_demo_btn_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_message" />

        <Button
            android:id="@+id/activity_demo_btn_top_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/top_message" />

        <Button
            android:id="@+id/activity_demo_btn_middle_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/middle_message" />

        <Button
            android:id="@+id/activity_demo_btn_long_duration_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/long_duration_message" />
    </LinearLayout>
</ScrollView>